# compile-pdf-rewrite

./: .coderabbit.yaml  .cursorrules  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
src/compile_pdf_rewrite/: __init__.py  api.py  cli.py  engine.py  plan_schema.py  verify.py
tests/: test_rewrite_api.py  test_rewrite_cli.py  test_rewrite_determinism.py  test_rewrite_engine.py  test_rewrite_plan_schema.py  test_rewrite_surface.py  test_rewrite_verify.py
